--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Luca Merlo
     - name: Date of Birth
-      value: 14th March 1879
+      value: 15th April 1995
     - name: Languages
-      value: English, German
+      value: Italian, English, French
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Sapienza University of Rome, Rome, Italy
+      year: 2022
       description:
         - Description 1.
         - Description 2.
