--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,3 @@
-"Petrella":
-  - firstname: ["Lea", "L."]
-    url: https://web.uniroma1.it/memotef/users/petrella-lea
+# "Petrella":
+#   - firstname: ["Lea", "L."]
+#     url: https://web.uniroma1.it/memotef/users/petrella-lea
